Rename URL as Address and mark it as optional

--- a/manifests/crds/analysis-template-crd.yaml
+++ b/manifests/crds/analysis-template-crd.yaml
@@ -76,19 +76,18 @@ spec:
                     properties:
                       datadog:
                         properties:
+                          address:
+                            type: string
                           apikey:
                             type: string
                           appkey:
                             type: string
                           query:
                             type: string
-                          url:
-                            type: string
                         required:
                         - apikey
                         - appkey
                         - query
-                        - url
                         type: object
                       job:
                         properties:
