Add interval parameter

--- a/manifests/crds/analysis-run-crd.yaml
+++ b/manifests/crds/analysis-run-crd.yaml
@@ -88,6 +88,8 @@ spec:
                             type: string
                           appkey:
                             type: string
+                          interval:
+                            type: string
                           query:
                             type: string
                         required:
