--- a/manifests/crds/analysis-template-crd.yaml
+++ b/manifests/crds/analysis-template-crd.yaml
@@ -82,6 +82,8 @@ spec:
                             type: string
                           appkey:
                             type: string
+                          interval:
+                            type: string
                           query:
                             type: string
                         required:
