--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -89,6 +89,8 @@ spec:
                             type: string
                           appkey:
                             type: string
+                          interval:
+                            type: string
                           query:
                             type: string
                         required:
@@ -2908,6 +2910,8 @@ spec:
                             type: string
                           appkey:
                             type: string
+                          interval:
+                            type: string
                           query:
                             type: string
                         required:
@@ -5654,6 +5658,8 @@ spec:
                           apikey:
                             type: string
                           appkey:
+                            type: string
+                          interval:
                             type: string
                           query:
                             type: string
